# server/src/routes/swagger.json
@@ -6,23 +6,6 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"RoleModel": {
-				"properties": {
-					"id": {
-						"type": "number",
-						"format": "double"
-					},
-					"name": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"id",
-					"name"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"LoginResponseModel": {
 				"properties": {
 					"email": {
@@ -33,7 +16,7 @@
 					},
 					"roles": {
 						"items": {
-							"$ref": "#/components/schemas/RoleModel"
+							"type": "string"
 						},
 						"type": "array"
 					},
@@ -62,6 +45,23 @@
 				"required": [
 					"email",
 					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"RoleModel": {
+				"properties": {
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"id",
+					"name"
 				],
 				"type": "object",
 				"additionalProperties": false
